--- a/apphere/Base.lproj/Main.storyboard
+++ b/apphere/Base.lproj/Main.storyboard
@@ -595,6 +595,22 @@ VISITING</string>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <button opaque="NO" alpha="0.69999998807907104" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Bs-Aj-r94" userLabel="Close Button" customClass="CloseButton" customModule="apphere" customModuleProvider="target">
+                                <rect key="frame" x="330" y="59" width="30" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="HfK-1Y-hiy"/>
+                                    <constraint firstAttribute="width" secondItem="9Bs-Aj-r94" secondAttribute="height" multiplier="1:1" id="hzz-eT-J5b"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="✖️">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="closeButtonTapped" destination="KVP-ZX-qKZ" eventType="touchUpInside" id="gHD-Vw-3xV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.53333333329999999" green="0.33725490200000002" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -603,9 +619,11 @@ VISITING</string>
                             <constraint firstItem="ZcU-z6-9dQ" firstAttribute="centerX" secondItem="FfK-2y-9ST" secondAttribute="centerX" id="6iz-Pa-xgn"/>
                             <constraint firstItem="FfK-2y-9ST" firstAttribute="trailing" secondItem="wpG-id-8WQ" secondAttribute="trailing" constant="20" id="9wn-0P-pDd"/>
                             <constraint firstItem="bPV-MN-lal" firstAttribute="top" secondItem="wpG-id-8WQ" secondAttribute="bottom" constant="100" id="BMx-OZ-7HR"/>
+                            <constraint firstItem="FfK-2y-9ST" firstAttribute="trailing" secondItem="9Bs-Aj-r94" secondAttribute="trailing" constant="15" id="D3X-5e-0CT"/>
                             <constraint firstItem="wpG-id-8WQ" firstAttribute="top" secondItem="FfK-2y-9ST" secondAttribute="top" constant="20" id="JWH-bV-Vvw"/>
                             <constraint firstItem="FfK-2y-9ST" firstAttribute="bottom" secondItem="brl-e9-4Sz" secondAttribute="bottom" constant="20" id="Nb4-11-cZG"/>
                             <constraint firstItem="bPV-MN-lal" firstAttribute="leading" secondItem="FfK-2y-9ST" secondAttribute="leading" constant="16" id="YkH-J2-9pP"/>
+                            <constraint firstItem="9Bs-Aj-r94" firstAttribute="top" secondItem="FfK-2y-9ST" secondAttribute="top" constant="15" id="pP2-sK-mb3"/>
                             <constraint firstItem="FfK-2y-9ST" firstAttribute="trailing" secondItem="brl-e9-4Sz" secondAttribute="trailing" constant="20" id="wbB-oc-GWP"/>
                             <constraint firstItem="wpG-id-8WQ" firstAttribute="leading" secondItem="FfK-2y-9ST" secondAttribute="leading" constant="20" id="yBK-NW-aAC"/>
                             <constraint firstItem="FfK-2y-9ST" firstAttribute="trailing" secondItem="bPV-MN-lal" secondAttribute="trailing" constant="16" id="z9k-2l-7Wf"/>
